# warehouse_management

./: CMakeLists.txt  vcpkg.json
apps/: app.cpp  app.h  main.cpp
config/: config.json
include/protocols/http/: api_service.h  http_client.h  warehouse_api_service.h
include/protocols/modbus/: modbus_rtu.h
include/protocols/mqtt/: hive_mqtt_client.h  mosquitto_client.h
include/protocols/mqtt/interface/: i_mqtt_client.h
include/sensors/: SHT35.h
include/sensors/interface/: i_sensor.h
include/utils/: crc16.h  datetime.h  helper.h  logger.h  terminal.h  thread_queue.h
src/protocols/http/: api_service.cpp  http_client.cpp  warehouse_api_service.cpp
src/protocols/modbus/: modbus_rtu.cpp
src/protocols/mqtt/: hive_mqtt_client.cpp  mosquitto_client.cpp
src/sensors/: SHT35.cpp
